  (Xavier Leroy)
- PR#6989: in Str library, make sure that all \(...\) groups are binding
    and can be consulted with Str.matched_group.  There used to be
    a limitation to 32 binding groups.
  (Xavier Leroy)
- PR#7013: spurious wake-up in the Event module
  (Xavier Leroy)
- PR#7024: in documentation of Str regular expressions, clarify what
    "end of line" means for "^" and "$" regexps.

OCamldep:
- GPR#286: add support for module aliases
  (jacques Garrigue)

Manual:
- GPR#302: The OCaml reference manual is now included in the manual/
  subdirectory of the main OCaml source repository. Contributions to
  the manual are warmly welcome.
  (François Bobot, review by Florian Angeletti)
- MPR#6676: ongoing simplification of the "Language Extensions" section
  (Alain Frisch, John Whitington)
- MPR#7092, GPR#379: Add missing documentation for new 4.03 features
  (Florian Angeletti)
- MPR#7109, GPR#380: Fix bigarray documentation layout
  (Florian Angeletti, Leo White)

Bug fixes:
- PR#3612: memory leak in bigarray read from file
  (Pierre Chambart, report by Gary Huber)
* PR#4166, PR#6956: force linking when calling external C primitives
  (Jacques Garrigue, reports by Markus Mottl and Christophe Troestler)
* PR#4466, PR#5325: under Windows, concurrent read and write operations
    on the same socket could block unexpectedly.  Fixed by keeping sockets
    in asynchronous mode rather than creating them in synchronous mode.
  (Xavier Leroy)
* PR#4539: change exception string raised when comparing functional values
  (Nicolas Braud-Santoni, report by Eric Cooper)
- PR#4832: Filling bigarrays may block out runtime
  (Markus Mottl)
- PR#5663: program rejected due to nongeneralizable type variable that
    appears nowhere
  (Jacques Garrigue, report by Stephen Weeks)
- PR#5780: Strange type variable names in error messages (GADTs)
    (only made the names more informative)
  (Jacques Garrigue, report by Sebastien Furic)